# cheanan_streamlit

./: fonts_config.py  main.py  pyproject.toml  requirements.txt
data/: TOTAL_BC1_MM_CCND_CUST_CRTR_CCND_CSPT_SGG_MG.csv  TOTAL_BC1_MM_CCND_EXCL_RSDT_CRTR_CCND_CSPT_SGG_MG.csv  TOTAL_BC1_MM_LC_CRTR_TOBIZ_SLS_SZ_MG.csv  가구원수별_반려동물_보유_유형별가구시도_20240809190525.xlsx  농림축산식품부_반려동물 미용업 현황_20221231.csv  농림축산식품부_반려동물 운송업 현황_20201230.csv  농림축산식품부_반려동물 장묘업 현황_12_30_2020.csv  농림축산식품부_반려동물 전시업 현황_20221231.csv  반려동물 등록현황(2018~2023).csv
pages/: 1_EDA.py  2_Location_recommendation.py  3_Results.py  4_Appendix.py
